--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-resource.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.0.0/ui-bootstrap-tpls.js"></script>
 
     <script src="js/app.js"></script>
     <script src="controllers/MainCtrl.js"></script>
     <script src="controllers/AboutCtrl.js"></script>
     <script src="controllers/PaymentCtrl.js"></script>
+    <script src="controllers/ModalCtrl.js"></script>
+    <script src="controllers/PayPalCtrl.js"></script>
 
 
   </head>
