--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gurame Gurame</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+   <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 
@@ -21,18 +24,15 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
 
-    <script src="js/app.js"></script>
+    <script src="public/app/app.js"></script>
     <script src="ng-Lettering.js"></script>
-    <script src="controllers/MainCtrl.js"></script>
-    <script src="controllers/AboutCtrl.js"></script>
-    <script src="controllers/PaymentCtrl.js"></script>
-    <script src="controllers/PayPalCtrl.js"></script>
-
-
-
+    <script src="public/app/controllers/MainCtrl.js"></script>
+    <script src="public/app/controllers/AboutCtrl.js"></script>
+    <script src="public/app/controllers/PaymentCtrl.js"></script>
+    
   </head>
   <body ng-app="Gurame_Gurame">
-    <h1 class="text-center">Graeme Smith</h1>
+    <h1 class="title">Graeme Smith</h1>
     <h1>{{ 2 + 2 }}</h1>
     <ul class="linkList">
       <li>
@@ -45,9 +45,41 @@
         <h4><a href="/#/payment">Payment</a></h4>
       </li>
     </ul>
-    <!-- <img src="img/marioBackground.jpg"> -->
 
     <div ui-view></div>
+
+    <footer>
+        <div class="container" id="contact">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h4><strong>Graeme Smith</strong>
+                    </h4>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">guramguram1@gmail.com</a>
+                        <!-- <li><a href="https://www.linkedin.com/in/joe-marzullo-2978a075">Linked In</a></li>
+                        </li>
+                        <li><a href="https://github.com/jmarzu">GitHub</a></li>
+                        <li><a href="resume.pdf" download>Download Resume</a></li> -->
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
+                        </li>
+                    </ul>
+                    <hr class="small">
+                    <p class="text-muted">Copyright &copy; Graeme Smith 2016</p>
+                </div>
+            </div>
+        </div>
+        <!-- <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a> -->
+    </footer>
 
 
 
@@ -58,7 +90,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <!-- My script to run JavaScript -->
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
 
   </body>
 </html>
