--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gurame Gurame</title>
+    
+    <title>Guram Guram</title>
+
+    <link rel="icon" href="public/img/guramLogo.jpg">
 
     <!-- Bootstrap CSS -->
    <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
@@ -29,12 +32,27 @@
     <script src="public/app/controllers/MainCtrl.js"></script>
     <script src="public/app/controllers/AboutCtrl.js"></script>
     <script src="public/app/controllers/PaymentCtrl.js"></script>
+    <script src="public/app/controllers/AdminCtrl.js"></script>
+    <script src="public/app/controllers/ProductCtrl.js"></script>
+    <script src="public/app/controllers/ArtCtrl.js"></script>
     
   </head>
-  <body ng-app="Gurame_Gurame">
-    <h1 class="title">Graeme Smith</h1>
-    <h1>{{ 2 + 2 }}</h1>
-    <ul class="linkList">
+  <body ng-app="Guram_Guram">
+
+    <nav>
+      <div class="nav-wrapper">
+        <a href="/#/" class="brand-logo">Guram Guram</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/#/art">Art</a></li>
+          <li><a href="/#/products">Products</a></li>
+          <li><a href="/#/about">Guram Guram</a></li>
+          <li><a href="/#/payment">Purchase</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- <h1 class="title">Graeme Smith</h1> -->
+    <!-- <ul class="linkList">
       <li>
         <h4><a href="/#/">Art</a></h4>
       </li>
@@ -44,7 +62,7 @@
       <li>
         <h4><a href="/#/payment">Payment</a></h4>
       </li>
-    </ul>
+    </ul> -->
 
     <div ui-view></div>
 
@@ -55,8 +73,9 @@
                     <h4><strong>Graeme Smith</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">guramguram1@gmail.com</a>
-                        <!-- <li><a href="https://www.linkedin.com/in/joe-marzullo-2978a075">Linked In</a></li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">guramguram1@gmail.com</a></li>
+                        <li><a href="/#/admin">Admin</a></li>
+                        <!-- <li><a href="https://www.linkedin.com/in/joe-marzullo-2978a075">Linked In</a></li
                         </li>
                         <li><a href="https://github.com/jmarzu">GitHub</a></li>
                         <li><a href="resume.pdf" download>Download Resume</a></li> -->
