--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
    <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 
@@ -27,14 +27,14 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
 
-    <script src="public/app/app.js"></script>
-    <script src="ng-Lettering.js"></script>
-    <script src="public/app/controllers/MainCtrl.js"></script>
-    <script src="public/app/controllers/AboutCtrl.js"></script>
-    <script src="public/app/controllers/PaymentCtrl.js"></script>
-    <script src="public/app/controllers/AdminCtrl.js"></script>
-    <script src="public/app/controllers/ProductCtrl.js"></script>
-    <script src="public/app/controllers/ArtCtrl.js"></script>
+    <script src="/app/app.js"></script>
+    <!-- <script src="ng-Lettering.js"></script> -->
+    <script src="/app/controllers/MainCtrl.js"></script>
+    <script src="/app/controllers/AboutCtrl.js"></script>
+    <script src="/app/controllers/PaymentCtrl.js"></script>
+    <script src="/app/controllers/AdminCtrl.js"></script>
+    <script src="/app/controllers/ProductCtrl.js"></script>
+    <script src="/app/controllers/ArtCtrl.js"></script>
     
   </head>
   <body ng-app="Guram_Guram">
