Secure login works

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <script src="/app/controllers/AdminCtrl.js"></script>
     <script src="/app/controllers/ProductCtrl.js"></script>
     <script src="/app/controllers/ArtCtrl.js"></script>
+    <script src="/app/controllers/AddInventoryCtrl.js"></script>
     
   </head>
   <body ng-app="Guram_Guram">
@@ -51,19 +52,6 @@
       </div>
     </nav>
 
-    <!-- <h1 class="title">Graeme Smith</h1> -->
-    <!-- <ul class="linkList">
-      <li>
-        <h4><a href="/#/">Art</a></h4>
-      </li>
-      <li>
-        <h4><a href="/#/about">Gurame Gurame</a></h4>
-      </li>
-      <li>
-        <h4><a href="/#/payment">Payment</a></h4>
-      </li>
-    </ul> -->
-
     <div ui-view></div>
 
     <footer>
@@ -75,23 +63,8 @@
                     <ul class="list-unstyled">
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:name@example.com">guramguram1@gmail.com</a></li>
                         <li><a href="/#/admin">Admin</a></li>
-                        <!-- <li><a href="https://www.linkedin.com/in/joe-marzullo-2978a075">Linked In</a></li
-                        </li>
-                        <li><a href="https://github.com/jmarzu">GitHub</a></li>
-                        <li><a href="resume.pdf" download>Download Resume</a></li> -->
                     </ul>
                     <br>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-dribbble fa-fw fa-3x"></i></a>
-                        </li>
-                    </ul>
                     <hr class="small">
                     <p class="text-muted">Copyright &copy; Graeme Smith 2016</p>
                 </div>
